k8s-manifests/kong/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    name: kong
    app: api-gateway-poc
