k8s-manifests/kong/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: kong
  labels:
    app: kong-proxy
spec:
  type: LoadBalancer
  ports:
  - name: proxy
    port: 8000
    targetPort: 8000
    protocol: TCP
  - name: admin
    port: 8001
    targetPort: 8001
    protocol: TCP
  selector:
    app: kong-proxy
